# gpd

./: CMakeLists.txt  clang_gpd_build.sh  gcc_gpd_build.sh  test_gpd.sh
include/gpd/: data_generator.h  grasp_detector.h  sequential_importance_sampling.h
include/gpd/candidate/: hand.h
include/gpd/descriptor/: image_generator.h
include/gpd/util/: cloud.h  config_file.h  plot.h
src/: cem_detect_grasps.cpp  detect_grasps.cpp  detect_grasps_python.cpp  generate_candidates.cpp  generate_data.cpp  label_grasps.cpp
src/gpd/: data_generator.cpp  grasp_detector.cpp  sequential_importance_sampling.cpp
src/gpd/candidate/: hand_geometry.cpp  hand_search.cpp  hand_set.cpp
src/gpd/descriptor/: image_12_channels_strategy.cpp  image_15_channels_strategy.cpp  image_1_channels_strategy.cpp  image_3_channels_strategy.cpp  image_geometry.cpp  image_strategy.cpp
src/gpd/net/: eigen_classifier.cpp
src/gpd/util/: cloud.cpp  config_file.cpp  plot.cpp
src/tests/: test_grasp_image.cpp
